# PytorchMatlabBind

./: .gitignore  CMakeLists.txt  FindMatlab.cmake  README.md
include/: arbitrary_torch.hpp
spikes/: example_usage.m
src/: arbitrary_torch.cpp  mex_interface.cpp
src/matlab/: pseudo_col2row_major.m  pseudo_row2_col_major.m
